tests/ui/suggestions/suggest-box.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-box.rs:4:47
   |
LL |       let _x: Box<dyn Fn() -> Result<(), ()>> = || {
   |  _____________-------------------------------___^
   | |             |
   | |             expected due to this
LL | |         Err(())?;
LL | |         Ok(())
LL | |     };
   | |_____^ expected `Box<dyn Fn() -> Result<(), ()>>`, found closure
   |
   = note: expected struct `Box<dyn Fn() -> Result<(), ()>>`
             found closure `[closure@$DIR/suggest-box.rs:4:47: 4:49]`
   = note: for more on the distinction between the stack and the heap, read https://doc.rust-lang.org/book/ch15-01-box.html, https://doc.rust-lang.org/rust-by-example/std/box.html, and https://doc.rust-lang.org/std/boxed/index.html
help: store this in the heap by calling `Box::new`
   |
LL ~     let _x: Box<dyn Fn() -> Result<(), ()>> = Box::new(|| {
LL |         Err(())?;
LL |         Ok(())
LL ~     });
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
